# aur-fetch.rs

./: Cargo.toml
example/: Cargo.toml
example/src/: main.rs
src/: callback.rs  error.rs  fetch.rs  lib.rs
