[package]
name = "aur-fetch"
version = "0.10.0"
authors = ["morganamilo <morganamilo@gmail.com>"]
edition = "2018"

description = "A libary for downloading and diffing AUR packages"
homepage = "http://github.com/Morganamilo/aur-fetch.rs"
repository = "http://github.com/Morganamilo/aur-fetch.rs"
documentation = "https://docs.rs/aur_fetch"
license = "GPL-3.0"
keywords = ["archlinux", "pkgbuild", "arch", "aur"]

[dependencies]
url = "2.1.1"
tempfile = { version = "3.1.0", optional = true }
tokio = { version = "1.0.1", features = ["process"] }
futures = "0.3.5"

[features]
view = ["tempfile"]
default = ["view"]
