[package]
name = "aur-fetch"
version = "0.11.3"
authors = ["morganamilo <morganamilo@gmail.com>"]
edition = "2018"

description = "A libary for downloading and diffing AUR packages"
homepage = "http://github.com/Morganamilo/aur-fetch.rs"
repository = "http://github.com/Morganamilo/aur-fetch.rs"
documentation = "https://docs.rs/aur_fetch"
license = "GPL-3.0"
keywords = ["archlinux", "pkgbuild", "arch", "aur"]

[dependencies]
url = "2.5.3"
crossbeam = "0.8.4"
log = "0.4.22"
